# terraform-aws-lambda-container

./: .gitignore  .trivyignore  Dockerfile  README.md  lambda_function.py  pyproject.toml  trivy-config.yml
.github/workflows/: trivy-scan.yml
terraform/: data.tf  main.tf  variables.tf
